# ollama_proxy

./: .gitignore  Cargo.toml  Config_template.toml  LICENSE  README.md  log4rs.yml
.github/workflows/: release.yml
src/: config.rs  main.rs
src/llm/: anthropic.rs  mod.rs  perplexity.rs
