[package]
name = "ollama_proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["http1"] }
http = "1.1.0"
serde_json = "1.0.133"
tokio = { version = "1.41.1", features = ["full", "rt-multi-thread"] }
reqwest = { version = "0.12.9", features = ["json"] }
hyper = { version = "1.5.1", features = ["full"] }
chrono = "0.4.38"
async-trait = "0.1.83"
config = "0.14.1"
serde = { version = "1.0.215", features = ["derive"] }